--- a/packages/react-app/src/App.css
+++ b/packages/react-app/src/App.css
@@ -19,20 +19,19 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-
 }
 
 .bg-dao-image {
   width: 100%;
   height: 100%;
-  background-image: url('./assets/partnership.png');
+  background-image: url("./assets/partnership.png");
   background-position: center;
 }
 
 .demo-wrap {
   overflow: hidden;
   position: relative;
-  background: linear-gradient(90deg, #090909 0%, #3F040B 100%);
+  background: linear-gradient(90deg, #090909 0%, #3f040b 100%);
 }
 
 .demo-bg {
@@ -54,7 +53,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0,0,0,0.5);
+  background-color: rgba(0, 0, 0, 0.5);
   z-index: 2;
   cursor: pointer;
 }
